--- a/TicketSystem/Views/Home/Index.cshtml
+++ b/TicketSystem/Views/Home/Index.cshtml
@@ -20,6 +20,7 @@
                 </p>
             </div>
         </div>
+        <h2>Hejsa</h2>
         <div class="item">
             <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
             <div class="carousel-caption" role="option">
