--- a/TicketSystem/Views/Home/Index.cshtml
+++ b/TicketSystem/Views/Home/Index.cshtml
@@ -19,8 +19,8 @@
                     </a>
                 </p>
             </div>
-        </div>
-        <h2>Hejsa</h2>
+        </div> 
+        <h1>dfsfdsf</h1>
         <div class="item">
             <img src="~/images/banner2.svg" alt="Visual Studio" class="img-responsive" />
             <div class="carousel-caption" role="option">
