--- a/TicketSystem/Views/Home/LandingPage.cshtml
+++ b/TicketSystem/Views/Home/LandingPage.cshtml
@@ -1,8 +1,34 @@
 ﻿@{
-    ViewData["Title"] = "About";
+    ViewData["Title"] = "Ticket System";
 }
-<h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
 
+<div class="row">
+    <div class="col-12">
+        <h2>@ViewData["Title"]</h2>
+    </div>
+    <div class="card w-100">
+        <div class="card-body">
+          
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-2">
+                        <img src="https://via.placeholder.com/100" alt="Alternate Text" />
+                    </div>
+                    <div class="col-8">
+                        <h5 class="card-title">Event Name</h5>
+                        <p class="mb-0">Date</p>
+                        <p class="mb-0">Time</p>
+                        <p class="mb-0">Location</p>
+                      
+                    </div>
+                    <div class="col-2 text-center">
+                        <p>80 kr.</p>
+                        <a href="#" class="btn btn-primary">Button</a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
