--- a/TicketSystem/Views/Shared/_Layout.cshtml
+++ b/TicketSystem/Views/Shared/_Layout.cshtml
@@ -25,9 +25,10 @@
 
             <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav mr-auto">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li class="mr-1"><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+                    <li class="mr-1"><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
+                    <li class="mr-1"><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li class="mr-1"><a asp-area="" asp-controller="Event" asp-action="Index">Event</a></li>
 
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
