--- a/TicketSystem/Views/Shared/_Layout.cshtml
+++ b/TicketSystem/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                 <ul class="navbar-nav mr-auto">
                     <li class="mr-1"><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li class="mr-1"><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li class="mr-1"><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li class="mr-1"><a asp-area="" asp-controller="Home" asp-action="Contact"><i class="fab fa-accessible-icon"></i> Contact</a></li>
                     <li class="mr-1"><a asp-area="" asp-controller="Event" asp-action="Index">Event</a></li>
 
                 </ul>
