--- a/TicketSystem/Views/Organizer/Index.cshtml
+++ b/TicketSystem/Views/Organizer/Index.cshtml
@@ -3,5 +3,19 @@
 
 }
 
-<h2>Index</h2>
+<h2>Organizer Login-page</h2>
+
+<form>
+    <label>Email Address </label>
+    <input type ="text"/>
+
+    <label>Password</label>
+    <input type="password" />
+
+    <input type="submit" />
+
+
+    <p>Click here to register as new user</p>
+    <button>Click Me</button>
+</form>
 
