--- a/TicketSystem/Views/Event/Index.cshtml
+++ b/TicketSystem/Views/Event/Index.cshtml
@@ -3,10 +3,73 @@
    var Event = ViewBag.Event;
 }
 
-<h2>Event #1</h2>
-<p> Event name: @Event.EventName</p>
-<p> Price for a ticket is: @Event.Price</p>
-<p> The event will take place at @Event.Location</p>
-<p> Remember the event ID for this event is @Event.EventID</p>
+<div class="card w-100 mt-3 border-0">
+    <div class="card-body pb-0">
 
-    
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-4">
+                    <img src="https://via.placeholder.com/200" alt="Alternate Text" />
+                </div>
+                <div class="col-8">
+                    <h3 class="card-title">Event Name</h3>
+                    <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <hr />
+                    <ul class="eventdata">
+                        <li><b>Rendsburggade 10c, 3. 6, 9000 Aalborg</b></li>
+                        <li>24. December 2022</li>
+                        <li>20:00</li>
+                        <li>Standing</li>
+                        <li>1200 kr.</li>
+                    </ul>
+
+                </div>
+
+            </div>
+
+
+        </div>
+
+    </div>
+
+</div>
+<hr>
+<h3 class="text-center mb-3">Order Ticket</h3>
+<form>
+    <div class="form-row">
+       
+        <div class="form-group col-md-6">
+            <label for="inputFirstName4">First Name</label>
+            <input type="text" class="form-control" id="inputFirstName4" placeholder="First Name">
+        </div>
+        <div class="form-group col-md-6">
+            <label for="inputSurname4">Surname</label>
+            <input type="text" class="form-control" id="inputSurname4" placeholder="Surname">
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="inputEmail">Email</label>
+        <input type="email" class="form-control" id="inputEmail" placeholder="example@gmail.com">
+    </div>
+    <div class="form-group">
+        <label for="inputConfirmEmail">Confirm Email</label>
+        <input type="email" class="form-control" id="inputConfirmEmail" placeholder="example@gmail.com">
+    </div>
+    <div class="form-group">
+        <label for="inputPhoneNumber">Phone Number</label>
+            <input type="number" class="form-control" id="inputPhoneNumber" placeholder="12345678">
+            </div>
+    <div class="row">
+        <div class="col-8">
+            <button type="button" class="btn btn-primary">Back</button>
+        </div>
+        <div class="col-4">
+            <button type="submit" class="btn btn-primary">Proceed to payment</button>
+        </div>
+
+
+    </div>
+   
+  
+
+</form>
