View update test

--- a/TicketSystem/Views/Event/Index.cshtml
+++ b/TicketSystem/Views/Event/Index.cshtml
@@ -17,7 +17,7 @@
                     <hr />
                     <ul class="eventdata">
                         <li><b>Rendsburggade 10c, 3. 6, 9000 Aalborg</b></li>
-                        <li>24. December 2022</li>
+                        <li>24. December 2022 222</li>
                         <li>20:00</li>
                         <li>Standing</li>
                         <li>1200 kr.</li>
