--- a/TicketSystem/Views/Event/CreateEvent.cshtml
+++ b/TicketSystem/Views/Event/CreateEvent.cshtml
@@ -1,7 +1,8 @@
 ﻿@{
+    var Event = ViewBag.Event;
 }
 
-<h3 class="text-center mb-3">Order Ticket</h3>
+<h3 class="text-center mb-3">Create Event</h3>
 <form>
     <div class="form-row">
 
