--- a/TicketSystem/Views/Shared/_Layout.cshtml
+++ b/TicketSystem/Views/Shared/_Layout.cshtml
@@ -31,6 +31,7 @@
             <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav mr-auto">
                     <li class="mr-1"><a asp-area="" asp-controller="Home" asp-action="LandingPage">Home</a></li>
+                    <li class="mr-1"><a asp-area="" asp-controller="Event" asp-action="CreateEvent">Test</a></li>
                     <li class="mr-1"><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li class="mr-1"><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                     <li class="mr-1"><a asp-area="" asp-controller="Event" asp-action="Index"><i class="fas fa-calendar-alt"></i> Event</a></li>
