Create event side er lavet

--- a/TicketSystem/Views/Event/CreateEvent.cshtml
+++ b/TicketSystem/Views/Event/CreateEvent.cshtml
@@ -2,37 +2,54 @@
     var Event = ViewBag.Event;
 }
 
-<h3 class="text-center mb-3">Create Event</h3>
-<form>
-    <div class="form-row">
+<h3 id="Createevent" class="text-left">Create Event</h3>
 
-        <div class="form-group col-md-6">
-            <label for="inputFirstName4">First Name</label>
-            <input type="text" class="form-control" id="inputFirstName4" placeholder="First Name">
-        </div>
-        <div class="form-group col-md-6">
-            <label for="inputSurname4">Surname</label>
-            <input type="text" class="form-control" id="inputSurname4" placeholder="Surname">
-        </div>
+<div class="float-right form-group col-md-6">
+    <form action="#">
+        <textarea name="message" style="width:100%; height:350px;"></textarea>
+        <br>
+        <input type="submit">
+    </form>
+</div>
+
+<form>
+    <div class="form-group col-md-6">
+        <label for="eventname">Event name</label>
+        <input type="text" class="form-control" id="eventname" placeholder="Event Name">
     </div>
-    <div class="form-group">
-        <label for="inputEmail">Email</label>
-        <input type="email" class="form-control" id="inputEmail" placeholder="example@gmail.com">
+    <div class="form-group col-md-6">
+        <label for="location">Location</label>
+        <input type="text" class="form-control" id="location" placeholder="Aalborg Universitet">
     </div>
-    <div class="form-group">
-        <label for="inputConfirmEmail">Confirm Email</label>
-        <input type="email" class="form-control" id="inputConfirmEmail" placeholder="example@gmail.com">
+    <div class="form-group col-md-6">
+        <label for="date">Date</label>
+        <input type="date" class="form-control" id="Date" placeholder="13/10/2019">
     </div>
-    <div class="form-group">
-        <label for="inputPhoneNumber">Phone Number</label>
-        <input type="number" class="form-control" id="inputPhoneNumber" placeholder="12345678">
+    <div class="form-group col-md-6">
+        <label for="time">Time</label>
+        <input type="time" class="form-control" id="Time" placeholder="20:30">
     </div>
-    <div class="row">
-        <div class="col-8">
-            <button type="button" class="btn btn-primary">Back</button>
-        </div>
-        <div class="col-4">
-            <button type="submit" class="btn btn-primary">Proceed to payment</button>
-        </div>
+    <div class="form-group col-md-6">
+        <label for="seat">Seat</label>
+        <input type="text" class="form-control" id="Seat" placeholder="B2A2">
+    </div>
+    <div class="form-group col-md-6">
+        <label for="price">Price</label>
+        <input type="number" class="form-control" id="Price" placeholder="12 kr.">
     </div>
 </form>
+<div class="form-group col-md-4">
+    <form action="upload.php" method="post">
+        <label for="image">Image</label>
+        <input type="file" class="form-control" name="fileToUpload" id="fileToUpload" placeholder="Image.png">
+    </form>
+</div>
+
+<div class="row">
+    <div class="col-8">
+        <button type="button" class="btn btn-primary">Back</button>
+    </div>
+    <div class="col-4">
+        <button type="submit" class="btn btn-primary">Create event</button>
+    </div>
+</div>
