Org. landingpage done

--- a/TicketSystem/Views/Organizer/OrganizerLandingPage.cshtml
+++ b/TicketSystem/Views/Organizer/OrganizerLandingPage.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewData["Title"] = "OrganizerLandingPage";
+    ViewData["Title"] = "Organizer LandingPage";
 }
 
 
@@ -8,27 +8,32 @@
     <div class="col-12">
         <h2>@ViewData["Title"]</h2>
     </div>
+
+    <div class="row">
+            <a href="#" class="btn btn-primary w-100 mt-2">+ Create event</a>
+    </div>
     <div class="card w-100 mt-3">
         <div class="card-body">
-          
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-2">
                         <img src="https://via.placeholder.com/100" alt="Alternate Text" />
                     </div>
-                    <div class="col-8">
+                    <div class="col-4">
                         <h5 class="card-title">Event Name</h5>
                         <p class="mb-0">Date</p>
                         <p class="mb-0">Time</p>
                         <p class="mb-0">Location</p>
-                      
+                    </div>
+                    <div class="col-4">
+                        <p class="mb-0 mt-3">32 tickets total</p>
+                        <p class="mb-0 mt-3">30 tickets sold</p>
                     </div>
                     <div class="col-2 text-center">
-                        <p>80 kr.</p>
-                        <a href="#" class="btn btn-primary">Button</a>
-                       
+                        <a href="#" class="btn btn-primary mb-2 mt-2 w-100">View event</a>
+                        <a href="#" class="btn btn-primary w-100">Edit event</a>
                     </div>
-                   
+
                 </div>
 
             </div>
@@ -43,17 +48,19 @@
                     <div class="col-2">
                         <img src="https://via.placeholder.com/100" alt="Alternate Text" />
                     </div>
-                    <div class="col-8">
+                    <div class="col-4">
                         <h5 class="card-title">Event Name</h5>
                         <p class="mb-0">Date</p>
                         <p class="mb-0">Time</p>
                         <p class="mb-0">Location</p>
-
+                    </div>
+                    <div class="col-4">
+                        <p class="mb-0 mt-3">100 tickets total</p>
+                        <p class="mb-0 mt-3">43 tickets sold</p>
                     </div>
                     <div class="col-2 text-center">
-                        <p>80 kr.</p>
-                        <a href="#" class="btn btn-primary">Button</a>
-
+                        <a href="#" class="btn btn-primary mb-2 mt-2 w-100">View event</a>
+                        <a href="#" class="btn btn-primary w-100">Edit event</a>
                     </div>
 
                 </div>
