--- a/TicketSystem/Views/Organizer/Index.cshtml
+++ b/TicketSystem/Views/Organizer/Index.cshtml
@@ -1,8 +1,13 @@
 ﻿
 @{
-
+    var organizer = ViewBag.Organizer;
 }
 
+
+<p>
+    @ViewBag.Message
+    
+</p>
 <h2>Organizer Login-page</h2>
 
 <form>
