--- a/TicketSystem/Views/Event/CreateEvent.cshtml
+++ b/TicketSystem/Views/Event/CreateEvent.cshtml
@@ -30,8 +30,8 @@
         <input type="time" class="form-control" id="Time" placeholder="20:30">
     </div>
     <div class="form-group col-md-6">
-        <label for="seat">Seat</label>
-        <input type="text" class="form-control" id="Seat" placeholder="B2A2">
+        <label for="totaltickets">Total amount of tickets</label>
+        <input type="number" class="form-control" id="TotalTickets" placeholder="100">
     </div>
     <div class="form-group col-md-6">
         <label for="price">Price</label>
