--- a/TicketSystem/Views/Event/EditEvent.cshtml
+++ b/TicketSystem/Views/Event/EditEvent.cshtml
@@ -8,7 +8,9 @@
 <div class="row">
     <div class="col-12 mb-3">
         <button type="button" class="btn btn-primary float-left">Cancel event</button>
+        <!-- Denne Delete knap skal kun vises på events der er udløbet eller cancelled
         <button type="submit" class="btn btn-primary float-left ml-5">Delete event</button>
+            -->
     </div>
 </div>
 
@@ -38,8 +40,8 @@
         <input type="time" class="form-control" id="Time" placeholder="20:30">
     </div>
     <div class="form-group col-md-6">
-        <label for="seat">Seat</label>
-        <input type="text" class="form-control" id="Seat" placeholder="B2A2">
+        <label for="totaltickets">Total amount of tickets</label>
+        <input type="number" class="form-control" id="TotalTickets" placeholder="100">
     </div>
     <div class="form-group col-md-6">
         <label for="price">Price</label>
