--- a/TicketSystem/wwwroot/css/site.css
+++ b/TicketSystem/wwwroot/css/site.css
@@ -47,3 +47,16 @@ ul {
     margin-top: 20px;
     margin-bottom: 40px;
 }
+
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+
+th, td {
+    padding: 5px;
+}
+
+th {
+    text-align: left;
+}
