--- a/TicketSystem/Views/Event/EditEvent.cshtml
+++ b/TicketSystem/Views/Event/EditEvent.cshtml
@@ -24,15 +24,15 @@
 
 <form>
     <div class="form-group col-md-6">
-        <label for="eventname">Event name</label>
-        <input type="text" class="form-control" id="eventname" placeholder="Event Name">
+        <label for="eventname">Event name *</label>
+        <input type="text" class="form-control" id="eventname" placeholder="Event Name" required>
     </div>
     <div class="form-group col-md-6">
-        <label for="location">Location</label>
+        <label for="location">Location *</label>
         <input type="text" class="form-control" id="location" placeholder="Aalborg Universitet">
     </div>
     <div class="form-group col-md-6">
-        <label for="date">Date</label>
+        <label for="date">Date </label>
         <input type="date" class="form-control" id="Date" placeholder="13/10/2019">
     </div>
     <div class="form-group col-md-6">
