Required fields for input forms

--- a/TicketSystem/Views/Event/CreateEvent.cshtml
+++ b/TicketSystem/Views/Event/CreateEvent.cshtml
@@ -14,28 +14,28 @@
 
 <form>
     <div class="form-group col-md-6">
-        <label for="eventname">Event name</label>
-        <input type="text" class="form-control" id="eventname" placeholder="Event Name">
+        <label for="eventname">Event name *</label>
+        <input type="text" class="form-control" id="eventname" placeholder="Event Name" required>
     </div>
     <div class="form-group col-md-6">
-        <label for="location">Location</label>
-        <input type="text" class="form-control" id="location" placeholder="Aalborg Universitet">
+        <label for="location">Location *</label>
+        <input type="text" class="form-control" id="location" placeholder="Aalborg Universitet" required>
     </div>
     <div class="form-group col-md-6">
-        <label for="date">Date</label>
-        <input type="date" class="form-control" id="Date" placeholder="13/10/2019">
+        <label for="date">Date *</label>
+        <input type="date" class="form-control" id="Date" placeholder="13/10/2019" required>
     </div>
     <div class="form-group col-md-6">
-        <label for="time">Time</label>
-        <input type="time" class="form-control" id="Time" placeholder="20:30">
+        <label for="time">Time *</label>
+        <input type="time" class="form-control" id="Time" placeholder="20:30" required>
     </div>
     <div class="form-group col-md-6">
-        <label for="totaltickets">Total amount of tickets</label>
-        <input type="number" class="form-control" id="TotalTickets" placeholder="100">
+        <label for="totaltickets">Total amount of tickets *</label>
+        <input type="number" class="form-control" id="TotalTickets" placeholder="100" required>
     </div>
     <div class="form-group col-md-6">
-        <label for="price">Price</label>
-        <input type="number" class="form-control" id="Price" placeholder="12 kr.">
+        <label for="price">Price *</label>
+        <input type="number" class="form-control" id="Price" placeholder="12 kr." required>
     </div>
 </form>
 <div class="form-group col-md-4">
