--- a/TicketSystem/Views/Organizer/CreateOrganizer.cshtml
+++ b/TicketSystem/Views/Organizer/CreateOrganizer.cshtml
@@ -6,11 +6,11 @@
 <h2>Create Organizer account</h2>
 
 <form>
-<label>Email Address </label>
-<input type="text" />
+<label>Email Address *</label>
+<input type="text" required />
 
-<label>Password</label>
-<input type="password" />
+<label>Password *</label>
+<input type="password" required />
 
 <input type="submit" value="Create User" />
 </form>
