--- a/TicketSystem/Views/Organizer/Index.cshtml
+++ b/TicketSystem/Views/Organizer/Index.cshtml
@@ -6,19 +6,19 @@
 
 <p>
     @ViewBag.Message
-    
+
 </p>
 <h2>Organizer Login-page</h2>
 
 @using (Html.BeginForm())
 {
     @Html.Label("Name") <br />
-    @Html.TextBox("Name")<br />
+    @Html.TextBox("Name", null, new {required = true,placeholder ="Skriv dit navn"})<br />
 
     <Br>
 
     @Html.Label("Password") <br />
-    @Html.TextBox("Password")<br />
+    @Html.Password("Password")<br />
 
 
     <button type="submit"> Submit </button>
