checkmark save changes editevent

--- a/TicketSystem/Views/Shared/_Layout.cshtml
+++ b/TicketSystem/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                     <li class="mr-1"><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li class="mr-1"><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                     <li class="mr-1"><a asp-area="" asp-controller="Event" asp-action="Index"><i class="fas fa-calendar-alt"></i> Event</a></li>
-
+                    <li class="mr-1"><a asp-area="" asp-controller="Organizer" asp-action="CreateOrganizer"> <i class="fas fa-user"></i>Create Organizer Login</a></li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
                     <input class="form-control mr-sm-2" type="text" placeholder="Search">
