--- a/TicketSystem/Views/Event/EditEvent.cshtml
+++ b/TicketSystem/Views/Event/EditEvent.cshtml
@@ -60,7 +60,7 @@
         <button type="button" class="btn btn-primary">Back</button>
     </div>
     <div class="col-4">
-        <button type="submit" class="btn btn-primary">Create event</button>
+        <button type="submit" class="btn btn-primary"><i class="fas fa-check"></i> Save Changes</button>
     </div>
 </div>
 
