--- a/TicketSystem/Views/Organizer/CreateOrganizer.cshtml
+++ b/TicketSystem/Views/Organizer/CreateOrganizer.cshtml
@@ -9,45 +9,47 @@
 </p>
 <h2>Create Organizer</h2>
 
-@using (Html.BeginForm())
-{
-    <div class="form-group">
-        @Html.Label("Contact person name") <br />
-        @Html.TextBox("Name", null, new { required = true, placeholder = "Contact Person name", @class = "form-control" })<br />
-    </div>
-    <Br>
-    <div class="form-group">
-        @Html.Label("Organization name") <br />
-        @Html.TextBox("OrganizationName", null, new { required = true, placeholder = "Organization Name", @class = "form-control" })<br />
-    </div>
-    <Br>
+<div class="row">
+    <div class="col-6">
+        @using (Html.BeginForm())
+    {
+        <div class="form-group mb-0">
+            @Html.Label("Contact Person name") <br />
+            @Html.TextBox("Name", null, new { required = true, placeholder = "Contact Person name", @class = "form-control" })<br />
+        </div>
 
-    <div class="form-group">
-        @Html.Label("Phonenumber") <br />
-        @Html.TextBox("Phonenumber", null, new { required = true, placeholder = "Phonenumber", @class = "form-control" })<br />
-
-    </div>
-
-    <Br>
-    <div class="form-group">
-        @Html.Label("Email Address") <br />
-        @Html.TextBox("Email", null, new { required = true, placeholder = "Email Address", @class = "form-control" })<br />
-
-    </div>
-
-    <Br>
-    <div class="form-group">
-        @Html.Label("Password") <br />
-        @Html.Password("Password", null, new { required = true, placeholder = "Password", @class = "form-control" })<br />
-    </div>
-    <Br>
+        <div class="form-group mb-0">
+            @Html.Label("Organization name") <br />
+            @Html.TextBox("OrganizationName", null, new { required = true, placeholder = "Organization Name", @class = "form-control" })<br />
+        </div>
 
 
+        <div class="form-group mb-0">
+            @Html.Label("Phonenumber") <br />
+            @Html.TextBox("Phonenumber", null, new { required = true, placeholder = "Phonenumber", @class = "form-control" })<br />
+
+        </div>
+
+        <div class="form-group mb-0">
+            @Html.Label("Email Address") <br />
+            @Html.TextBox("Email", null, new { required = true, placeholder = "Email Address", @class = "form-control" })<br />
+
+        </div>
 
 
-    <button type="submit"> Submit </button>
+        <div class="form-group mb-0">
+            @Html.Label("Password") <br />
+            @Html.Password("Password", null, new { required = true, placeholder = "Password", @class = "form-control" })<br />
+        </div>
+
+
+
+
+
+        <button type="submit" class="btn btn-primary"><i class="fas fa-check"></i> Submit </button>
 }
-
+        </div>
+    </div>
 
 
 
