--- a/TicketSystem/Views/Event/CreateEvent.cshtml
+++ b/TicketSystem/Views/Event/CreateEvent.cshtml
@@ -22,12 +22,8 @@
         <input type="text" class="form-control" id="location" placeholder="Aalborg Universitet" required>
     </div>
     <div class="form-group col-md-6">
-        <label for="date">Date *</label>
-        <input type="date" class="form-control" id="Date" placeholder="13/10/2019" required>
-    </div>
-    <div class="form-group col-md-6">
-        <label for="time">Time *</label>
-        <input type="time" class="form-control" id="Time" placeholder="20:30" required>
+        <label for="date">Date and time *</label>
+        <input type="datetime" class="form-control" id="Date" placeholder="13/10/2019 12:00" required>
     </div>
     <div class="form-group col-md-6">
         <label for="totaltickets">Total amount of tickets *</label>
