--- a/TicketSystem/Views/Event/CreateEvent.cshtml
+++ b/TicketSystem/Views/Event/CreateEvent.cshtml
@@ -21,7 +21,7 @@
             @Html.Label("Location *") <br />
             @Html.TextBox("Location", null, new { required = true, placeholder = "Location", @class = "form-control" })<br />
         </div>
-        <div class="form-group mb-0">
+        <div class="form-group mb-0">1
             @Html.Label("Date *") <br />
             @Html.TextBox("Date and time", null, new { required = true, placeholder = "Date and time", @class = "form-control", @type = "date" })<br />
         </div>
