--- a/TicketSystem/Views/Event/CreateEvent.cshtml
+++ b/TicketSystem/Views/Event/CreateEvent.cshtml
@@ -15,7 +15,7 @@
     <div class="col-md-6">
         <div class="form-group mb-0">
             @Html.Label("Event name *") <br />
-            @Html.TextBox("Event name", null, new { required = true, placeholder = "Event name", @class = "form-control" })<br />
+            @Html.TextBox("Name", null, new { required = true, placeholder = "Event name", @class = "form-control" })<br />
         </div>
         <div class="form-group mb-0">
             @Html.Label("Location *") <br />
@@ -23,15 +23,15 @@
         </div>
         <div class="form-group mb-0">1
             @Html.Label("Date *") <br />
-            @Html.TextBox("Date and time", null, new { required = true, placeholder = "Date and time", @class = "form-control", @type = "date" })<br />
+            @Html.TextBox("Date", null, new { required = true, placeholder = "Date and time", @class = "form-control", @type = "date" })<br />
         </div>
         <div class="form-group mb-0">
             @Html.Label("Start time *") <br />
-            @Html.TextBox("Start time", null, new { required = true, placeholder = "Start time", @class = "form-control", @type = "time" })<br />
+            @Html.TextBox("Time", null, new { required = true, placeholder = "Start time", @class = "form-control", @type = "time" })<br />
         </div>
         <div class="form-group mb-0">
             @Html.Label("Total amount of tickets *") <br />
-            @Html.TextBox("Total amount of tickets", null, new { required = true, placeholder = "Total amount of tickets", @class = "form-control", @type = "number" })<br />
+            @Html.TextBox("TicketAmount", null, new { required = true, placeholder = "Total amount of tickets", @class = "form-control", @type = "number" })<br />
         </div>
         <div class="form-group mb-0">
             @Html.Label("Price *") <br />
