--- a/TicketSystem/Views/Event/Index.cshtml
+++ b/TicketSystem/Views/Event/Index.cshtml
@@ -37,30 +37,35 @@
 </div>
 <hr>
 <h3 class="text-center mb-3">Order Ticket</h3>
-<form>
-    <div class="form-row">
-       
-        <div class="form-group col-md-6">
-            <label for="inputFirstName4">First Name *</label>
-            <input type="text" class="form-control" id="inputFirstName4" placeholder="First Name" required>
+
+
+@using (Html.BeginForm())
+{
+
+    <div class="col-1g-4 col-lg-offset-4">
+        <div class="form-group mb-0">
+            @Html.Label("First name *") <br />
+            @Html.TextBox("CustomerFirstname", null, new { required = true, placeholder = "First name", @class = "form-control", @type = "text" })<br />
         </div>
-        <div class="form-group col-md-6">
-            <label for="inputSurname4">Surname *</label>
-            <input type="text" class="form-control" id="inputSurname4" placeholder="Surname" required>
+        <div class="form-group mb-0">
+            @Html.Label("Surname *") <br />
+            @Html.TextBox("CustomerSurname", null, new { required = true, placeholder = "Surname", @class = "form-control", @type = "text" })<br />
+        </div>
+        <div class="form-group mb-0">
+
+            @Html.Label("Email *") <br />
+            @Html.TextBox("CustomerEmail", null, new { required = true, placeholder = "Email", @class = "form-control", @type = "text" })<br />
+        </div>
+        <div class="form-group mb-0">
+            @Html.Label("Confirm Email *") <br />
+            @Html.TextBox("ConfirmCustomerEmail", null, new { required = true, placeholder = "Confirm Email", @class = "form-control", @type = "text" })<br />
+        </div>
+        <div class="form-group mb-0">
+            @Html.Label("Phone number *") <br />
+            @Html.TextBox("CustomerPhonenumber", null, new { required = true, placeholder = "Phone Number", @class = "form-control", @type = "number" })<br />
         </div>
     </div>
-    <div class="form-group">
-        <label for="inputEmail">Email *</label>
-        <input type="email" class="form-control" id="inputEmail" placeholder="example@gmail.com" required>
-    </div>
-    <div class="form-group">
-        <label for="inputConfirmEmail">Confirm Email *</label>
-        <input type="email" class="form-control" id="inputConfirmEmail" placeholder="example@gmail.com" required>
-    </div>
-    <div class="form-group">
-        <label for="inputPhoneNumber">Phone Number</label>
-            <input type="number" class="form-control" id="inputPhoneNumber" placeholder="12345678">
-            </div>
+
     <div class="row">
         <div class="col-8">
             <button type="button" class="btn btn-primary">Back</button>
@@ -69,7 +74,12 @@
             <button type="submit" class="btn btn-primary">Proceed to payment</button>
         </div>
     </div>
-   
-  
 
-</form>
+}
+
+
+
+
+
+
+
