--- a/TicketSystem/Views/Event/Index.cshtml
+++ b/TicketSystem/Views/Event/Index.cshtml
@@ -1,1 +1,25 @@
-﻿
+﻿@{
+
+    var rows = ViewBag.rows;
+    var cols = ViewBag.cols; 
+    var events = ViewBag.events;
+}
+<table>
+
+    @for (int i = 0; i < rows; i++)
+    {
+        <tr>
+            @for (int j = 0; j < cols; j++)
+            {
+                <td>
+                    @events[i, j]
+                </td>
+
+            }
+
+        </tr>
+
+    }
+
+</table>
+
