slet standard sider. Layout ændring

--- a/TicketSystem/Views/Shared/_Layout.cshtml
+++ b/TicketSystem/Views/Shared/_Layout.cshtml
@@ -30,11 +30,7 @@
 
             <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav mr-auto">
-                    <li class="mr-1"><a asp-area="" asp-controller="Home" asp-action="LandingPage">Home</a></li>
-                    <li class="mr-1"><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li class="mr-1"><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                    <li class="mr-1"><a asp-area="" asp-controller="Event" asp-action="Index"><i class="fas fa-calendar-alt"></i> Event</a></li>
-                    <li class="mr-1"><a asp-area="" asp-controller="Organizer" asp-action="CreateOrganizer"> <i class="fas fa-user"></i>Create Organizer Login</a></li>
+                    <li class="mr-1"><a asp-area="" asp-controller="Customer" asp-action="LandingPage"><i class="fas fa-calendar-alt"></i>Events</a></li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
                     <input class="form-control mr-sm-2" type="text" placeholder="Search">
@@ -50,7 +46,13 @@
             @RenderBody()
             <hr />
             <footer>
-                <p>&copy; 2019 - TicketSystem</p>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12 text-right">
+                            <a asp-area="" asp-controller="Organizer" asp-action="Index">Organizer login</a>
+                        </div>
+                    </div>
+                </div>
             </footer>
         </div>
 
