--- a/TicketSystem/Views/Organizer/CreateOrganizer.cshtml
+++ b/TicketSystem/Views/Organizer/CreateOrganizer.cshtml
@@ -26,7 +26,7 @@
 
         <div class="form-group mb-0">
             @Html.Label("Phonenumber") <br />
-            @Html.TextBox("Phonenumber", null, new { required = true, placeholder = "Phone number", @class = "form-control" })<br />
+            @Html.TextBox("Phonenumber", null, new { required = true, placeholder = "Phone number", @class = "form-control", @type = "number" })<br />
 
         </div>
 
@@ -39,7 +39,7 @@
 
         <div class="form-group mb-0">
             @Html.Label("Password") <br />
-            @Html.Password("Password", null, new { required = true, placeholder = "Password", @class = "form-control" })<br />
+            @Html.Password("Password", null, new { required = true, placeholder = "Password", @class = "form-control", @type = "password" })<br />
         </div>
      
         <button type="submit" class="btn btn-primary"><i class="fas fa-check"></i> Submit </button>
