--- a/TicketSystem/Views/Event/CreateEvent.cshtml
+++ b/TicketSystem/Views/Event/CreateEvent.cshtml
@@ -35,7 +35,7 @@
         </div>
         <div class="form-group mb-0">
             @Html.Label("Price *") <br />
-            @Html.TextBox("Price", null, new { required = true, placeholder = "Price", @class = "form-control", @type = "number" })<br />
+            @Html.TextBox("Price", null, new { required = true, placeholder = "Price", @class = "form-control", @type = "float" })<br />
         </div>
         <div class="form-group mb-0">
             @Html.Label("Image") <br />
@@ -50,7 +50,7 @@
             <button type="button" class="btn btn-primary">Back</button>
         </div>
         <div class="col-4">
-            <button type="submit" class="btn btn-primary">Create event</button>
+            <button type="submit" class="btn btn-primary"><i class="fas fa-check"></i>Create event</button>
         </div>
     </div>
 }
