--- a/TicketSystem/Views/Event/EditEvent.cshtml
+++ b/TicketSystem/Views/Event/EditEvent.cshtml
@@ -45,7 +45,7 @@
         </div>
         <div class="form-group mb-0">
             @Html.Label("Price *") <br />
-            @Html.TextBox("Price", null, new { required = true, placeholder = "Price", @class = "form-control", @type = "number" })<br />
+            @Html.TextBox("Price", null, new { required = true, placeholder = "Price", @class = "form-control", @type = "float" })<br />
         </div>
         <div class="form-group mb-0">
             @Html.Label("Image") <br />
@@ -58,7 +58,7 @@
             <button type="button" class="btn btn-primary">Back</button>
         </div>
         <div class="col-4">
-            <button type="submit" class="btn btn-primary">Save changes</button>
+            <button type="submit" class="btn btn-primary"><i class="fas fa-check"></i>Save changes</button>
         </div>
     </div>
 }
