--- a/TicketSystem/Views/Customer/OrderTicket.cshtml
+++ b/TicketSystem/Views/Customer/OrderTicket.cshtml
@@ -1,6 +1,8 @@
 ﻿
 @{
     var Ticket = ViewBag.Ticket;
+    ViewData["Title"] = "Order Ticket"; //Måske skal eventnavnet stå her?
+
 }
 
 <div class="card w-100 mt-3 border-0">
@@ -46,7 +48,7 @@
         <div class="form-group mb-0">
             @Html.Label("First name *") <br />
             @Html.TextBox("CustomerFirstname", null, new { required = true, placeholder = "First name", @class = "form-control", @type = "text" })<br />
-        </div>  
+        </div>
         <div class="form-group mb-0">
             @Html.Label("Surname *") <br />
             @Html.TextBox("CustomerSurname", null, new { required = true, placeholder = "Surname", @class = "form-control", @type = "text" })<br />
