--- a/TicketSystem/Views/Shared/_Layout.cshtml
+++ b/TicketSystem/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-12 text-right">
-                            <a asp-area="" asp-controller="Organizer" asp-action="Index">Organizer login</a>
+                            <a asp-area="" asp-controller="Organizer" asp-action="Login">Organizer login</a>
                         </div>
                     </div>
                 </div>
