--- a/TicketSystem/Views/Customer/OrderTicket.cshtml
+++ b/TicketSystem/Views/Customer/OrderTicket.cshtml
@@ -1,8 +1,15 @@
-<<<<<<< HEAD:TicketSystem/Views/Customer/OrderTicket.cshtml
+
 ﻿
 @{
     var Ticket = ViewBag.Ticket;
+    var id = ViewBag.id;
+    var events = ViewBag.Events;
 }
+
+@foreach (var eventt in events)
+{
+
+
 
 <div class="card w-100 mt-3 border-0">
     <div class="card-body pb-0">
@@ -12,23 +19,22 @@
                     <img src="https://via.placeholder.com/200" alt="Alternate Text" />
                 </div>
                 <div class="col-8">
-                    <h3 class="card-title">Event Name</h3>
-                    <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <h3 class="card-title">@eventt.EventName</h3>
+                    <p class="mb-0">@eventt.Description</p>
                     <hr />
                     <ul class="eventdata">
-                        <li><b>Rendsburggade 7c, 2. 4, 9000 Aalborg</b></li>
-                        <li>24. December 2022</li>
-                        <li><b>Rendsburggade 10c, 3. 6, 9000 Aalborg</b></li>
-                        <li>24. December 2022 222</li>
-                        <li>20:00</li>
-                        <li>Standing</li>
-                        <li>1200 kr.</li>
+                        <li><b>@eventt.Location</b></li>
+                        <li>@eventt.Date</li>
+                        <li>@eventt.Time</li>
+                        <li>@eventt.Price</li>
+
                     </ul>
                 </div>
             </div>
         </div>
     </div>
 </div>
+}
 <hr>
 <h3 class="text-center mb-3">Order Ticket @ViewBag.Message</h3>
 
@@ -71,20 +77,8 @@
 
 
 
-=======
-﻿@{
 
-    Event[] events = ViewBag.events;
-}
 
-@foreach(var e in events){
-    <p>@e.EventName</p>
-    <p>@e.Price</p>
-    <p>@e.Time.Hours:@e.Time.Minutes</p>
-    <p>@e.Date.Day/@e.Date.Month/@e.Date.Year</p>
 
-    <hr />
-}
->>>>>>> Database:TicketSystem/Views/Event/Index.cshtml
 
 
