--- a/TicketSystem/Views/Customer/OrderTicket.cshtml
+++ b/TicketSystem/Views/Customer/OrderTicket.cshtml
@@ -74,7 +74,7 @@
 =======
 ﻿@{
 
-    Event[] events = ViewBag.events;
+    Event[] events = ViewBag.Events;
 }
 
 @foreach(var e in events){
@@ -85,6 +85,6 @@
 
     <hr />
 }
->>>>>>> Database:TicketSystem/Views/Event/Index.cshtml
+
 
 
